Ensure labels never overlap

--- a/src/components/Informasjonspanel/BarChart/BarChart.less
+++ b/src/components/Informasjonspanel/BarChart/BarChart.less
@@ -83,9 +83,17 @@
     .max {
         top: 0;
         transform: translateY(-50%);
+
+        .typo-undertekst {
+            transform: translateY(-0.5rem);
+        }
     }
 
     .min {
         transform: translateY(50%);
+
+        .typo-undertekst {
+            transform: translateY(0.5rem);
+        }
     }
 }
